--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
      <link rel="stylesheet" href="styles.css">
+     <link rel="icon" type="img" href="website-logo.png">
 </head>
 <body>
 <h1>Basic Calculator</h1>
